# smtcoq

./: .gitignore  ARCHITECTURE.md  AUTHORS  BEST_PRACTICE.md  INSTALL.md  Makefile  README-JFLA19.md  README.md  TEST.TRUC  USE.md  _config.yml  ast.ml  ast.mli  builtin.ml  coq-smtcoq-extrapi.opam  coq-smtcoq.opam  dependencies_native.dot  dune-project  flake.nix  lexer.mll  lfscLexer.mll  lfsctosmtcoq.ml  parser.mly  rocq-smtcoq.opam  rocq-smtcoq.opam.template  verit.ml
.github/workflows/: build.yml  from-opam.yml  from-sources-rocq.yml  from-sources.yml  main.yml  manual.yml  master-pr.yml  master-push.yml  master.yml  matrix.yml  released-pr.yml  released-push.yml  released.yml
benchmarks/: dune  dune.inc  lfsc_tactics.v
benchmarks/files/: dune  generate_dune_rules.sh
ci/: manifest  manifest-opam  manifest-sources-8.11  smtcoq.docker
doc/: artifact-readme.md  artifact.md  sources.md
examples/: Abduction.v  Example.v  InsertionSort.v  Non_terminating.v  dune  example.ml  foo.v  lia.vtlog  one_equality_switch.v  switching_input.v  sym_zeq.v
examples/files/: hole4.cnf  lia.lfsc  sat.cnf  sat.zlog
extraction/: Extract.v  Makefile  sat_checker.mli  smt_checker.ml  smt_checker.mli  test.ml  utils.ml  verit_checker.ml  verit_checker.mli  zchaff_checker.ml
nix/: lib.nix
nix/pkgs/: smtcoq.nix  verit.nix
nix/smtcoq/: default.nix  smtcoq.nix  zchaff.nix
src/: BEST_PRACTICE.md  BoolToProp.v  Conversion_tactics.v  CoqMakefile.local  CoqMakefile.local-late  META.coq-smtcoq  Make  Make.native  Makefile  Makefile.local  Makefile.local-late  Makefile.native  Misc.v  PropToBool.v  QInst.v  ReflectFacts.v  SMTCoq.v  SMT_terms.v  Smt.v  State.v  Tactics.v  Trace.v  _CoqProject  configure.sh  dune  g_smtcoq.mlg  smtcoq_plugin.ml4  smtcoq_plugin.mlpack
src/Array/: PArray.v
src/Int63/: Int63.v  Int63Op.v  Int63Properties.v
src/PArray/: PArray.v
src/api/: Makefile  example.ml
src/array/: Array_checker.v  FArray.v  FArray_default.v  FArray_ord.v
src/bva/: BVList.v  Bva_checker.v
src/checker/: Checker.v  dune
src/classes/: SMT_classes.v  SMT_classes_instances.v
src/cnf/: Cnf.v
src/common/: coqInterface.ml  coqInterface.mli  coqTerms.ml  coqTerms.mli  dune  rocqInterface.ml  rocqInterface.mli  rocqVersionCompat-9.1.ml  rocqVersionCompat-9.2.ml  rocqVersionCompat.mli  sExpr.mli  sExprLexer.mll  sExprParser.mly  satAtom.ml  satAtom.mli  smtAtom.ml  smtAtom.mli  smtBtype.ml  smtBtype.mli  smtCertif.ml  smtCertif.mli  smtCnf.mli  smtCommands.ml  smtCommands.mli  smtForm.ml  smtForm.mli  smtMaps.mli  smtMisc.ml  smtMisc.mli  smtTrace.ml  smtTrace.mli  smtlib2_genConstr.ml  smtlib2_solver.ml  smtlib2_solver.mli  solverStatus.ml
src/core/: Instances.v  Terms.v  dune
src/euf/: Euf.v
src/extraction/: Extract.v  Makefile  coq-smtcoq-extrapi.opam  example.c  extrNative.ml  extrNative.mli  main.c  sat_checker.ml  sat_checker.mli  smt_checker.ml  smt_checker.mli  smtcoq.ml  smtcoq.mli  test.ml  testapi.ml  utils.mli  verit_checker.ml  verit_checker.mli  zchaff_checker.ml  zchaff_checker.mli
src/extraction/c/: Doxyfile  checker.c  checker.h  types.h
src/extraction/docker/: Dockerfile
src/extraction/ocaml/: api.ml  api.mli  debug_checker.ml  debug_checker.mli  smt_utils.ml
src/int63/: CnfInt63.v
src/lfsc/: Makefile  Readme.md  ast.ml  ast.mli  builtin.ml  builtin.mli  converter.ml  converter.mli  dune  hstring.ml  hstring.mli  lexer.mll  lfsc.ml  lfsc.mli  lfscLexer.mll  lfscParser.mly  lfscSyntax.ml  lfscSyntax.mli  lfsctosmtcoq.ml  lfsctoverit.ml  parser.mly  shashcons.ml  shashcons.mli  tosmtcoq.ml  tosmtcoq.mli  translator_sig.ml  translator_sig.mli  type.ml  type.mli  veritPrinter.ml
src/lfsc/standalone/tests/: bv_add.smt2  bvconcat.smt2  dune  ex.smt2  exx.smt2  generate_dune_rules.sh  swap1.smt2
src/lia/: Lia.v  dune  lia.ml  lia.mli
src/logics/: .lia.cache  CNF.v  EUF.v  LIA.v  dune
src/maps/: maps.v
src/preproc/: Conversion.v  Database_trakt.v
src/smtlib2/: SExpr.ml  SExpr.mli  SExprLexer.mll  SExprParser.mly  sExpr.ml  sExpr.mli  sExprLexer.mll  sExprParser.mly  smtlib2_ast.ml  smtlib2_ast.mli  smtlib2_genConstr.ml  smtlib2_genConstr.mli  smtlib2_lex.mll  smtlib2_parse.mly  smtlib2_solver.ml  smtlib2_solver.mli  smtlib2_util.ml  smtlib2_util.mli
src/solvers/: dune  g_smtcoq.mlg
src/spl/: Arithmetic.v  (+3 more)
tests/: _sat.plf  cvc4tov  dead_dnd001.lfsc  eq_diamond2.smt2  ex.lfsc  ex.smt2  sat13.smt2  sat6.lfsc  sat7.smt2  t.lfsc  uf1.lfsc
theories/: SMTCoq.v  dune
theories/checker/: MainChecker.v  dune
theories/checker/fol/: State.v  Terms.v  dune
theories/checker/small-checkers/array/: Array.v  dune
theories/checker/small-checkers/bva/: BVA.v  dune
theories/checker/small-checkers/cnf/: CNF.v  dune
theories/checker/small-checkers/euf/: EUF.v  dune
theories/checker/small-checkers/lia/: LIA.v  dune
theories/checker/small-checkers/spl/: Arithmetic.v  Assumptions.v  Operators.v  Syntactic.v  dune
theories/structures/: BVList.v  CompDecInstances.v  FArray.v  dune
theories/tactics/: QInst.v  Tactics.v  dune
theories/tactics/preproc/: Conversion.v  DatabaseTrakt.v  ReflectFacts.v  dune
theories/utils/: .lia.cache  CompDec.v  Misc.v  PArray.v  dune
unit-tests/: Makefile  Tests.v  Tests_abduce_tactic.v  Tests_lfsc.v  Tests_lfsc_tactics.v  Tests_verit.v  Tests_verit_tactics.v  Tests_verit_vernac.v  Tests_zchaff.v  Tests_zchaff_tactics.v  Tests_zchaff_vernac.v  abduce_tactics.v  bv1.smt2  bv2.smt2  debug_coq  debug_coq.v  demo_lfsc_bool.v  demo_lfsc_prop.v  dune  dune.inc  ex1.lfsc  generate_dune_rules.sh  large1.v  let2.smt2  lfsc_tactics.v  lia2.smt2  lia3.smt2  lia5.smt2  runcvc4.sh  runverit.sh  runzchaff.sh  sat0.smt2  sat11.smt2  sat12.smt2  sat2.cnf  sat2.smt2  sat3.cnf  sat6.smt2  sat7.cnf  sat7.smt2  (+7 more)
unit-tests/files/: bv2.vtlog  cmu_bmc_barrel6.cnf  dune  dune.inc  ex1.smt2  generate_dune_rules.sh  hole4.smt2  let1.smt2  lia1.smt2  lia4.smt2  lia6.smt2  lia7.smt2  run_zchaff.sh  sat1.cnf  sat1.smt2  sat10.smt2  sat13.smt2  sat14.smt2  sat3.smt2  sat4.smt2  sat5.smt2  sat6.cnf  sat8.smt2  uf3.smt2  uf5.smt2  uf6.smt2
(+240 files in other folders)
