opam-version: "2.0"
maintainer: "ckeller@lmf.cnrs.fr"
homepage: "https://smtcoq.github.io/"
dev-repo: "git+https://github.com/smtcoq/smtcoq.git"
bug-reports: "https://github.com/smtcoq/smtcoq/issues"
license: "CECILL-C"
build: [
  [make "-j%{jobs}%"]
]
install: [
  [make "install"]
]
depends: [
  "ocaml" {>= "4.13.1" & < "5~" }
  "num"
  "rocq-core" {>= "9.0" & < "9.2~"}
  "rocq-stdlib" {>= "9.0" & < "9.2~"}
  "rocq-trakt"
]
pin-depends: [
  [ "rocq-trakt.dev" "git+https://github.com/rocq-trakt/trakt.git" ]
]
tags: [
  "category:Computer Science/Decision Procedures and Certified Algorithms/Decision procedures"
  "category:Miscellaneous/Coq Extensions"
  "keyword: SMT"
  "keyword: SAT"
  "keyword: automation"
  "logpath:SMTCoq"
]
authors: [ 
 "Michaël Armand"
 "Valentin Blot"
 "Amina Bousalem"
 "Quentin Garchery"
 "Benjamin Grégoire"
 "Chantal Keller"
 "Burak Ekici"
 "Alain Mebsout"
]
synopsis: "A Rocq plugin that checks proof witnesses coming from external SAT and SMT solvers"
description: """
- a certified checker for proof witnesses coming from the SAT solver ZChaff and the SMT solvers veriT and CVC4. This checker increases the confidence in these tools by checking their answers a posteriori and allows to import new theroems proved by these solvers in Rocq;
- decision procedures through new tactics that discharge some Rocq goals to ZChaff, veriT, CVC4, and their combination"""
url {
  src: "git+https://github.com/smtcoq/smtcoq.git#with-trakt-rocq-9.0v1"
}
