(env
 (_
  (rocq
   (flags
    (:standard -I ../_build/install/default/lib)))))

(rocq.theory
 (name SMTCoq)
 (generate_project_file)
 (package rocq-smtcoq)
 (theories
  micromega_plugin  ; we need micromega_plugin because dune doesn't handle transitive dependencies
  Stdlib
  Trakt
  SMTCoq.structures
  SMTCoq.checker.fol
  SMTCoq.checker
  SMTCoq.tactics)
 (plugins rocq-smtcoq.smtcoq))
