(alias
 (name runtest)
 (deps
  (alias_rec all)))

(env
 (_
  (env-vars
   (LFSCSIGS "../../src/lfsc/signatures"))))

(rocq.theory
 (name SMTCoq.tests)
 (generate_project_file)
 (theories Stdlib SMTCoq)
 (modules abduce_tactics lfsc_tactics verit_tactics zchaff_tactics)
 (flags
  (:standard -I ../_build/install/default/lib)))
