(library
 (name common)
 (public_name rocq-smtcoq.common)
 (libraries num rocq-runtime.plugins.micromega smtlib2))

(ocamllex sExprLexer)

(ocamlyacc sExprParser)

(rule
 (targets rocqVersionCompat.ml)
 (action
  (copy rocqVersionCompat-%{rocq:version.major}.%{rocq:version.minor}.ml rocqVersionCompat.ml)))
