(rocq.theory
 (generate_project_file)
 (package rocq-smtcoq)
 (name SMTCoq.checker)
 (theories
  micromega_plugin  ; we need micromega_plugin because dune doesn't handle transitive dependencies
  Stdlib
  SMTCoq.utils
  SMTCoq.checker.small_checker.array
  SMTCoq.checker.small_checker.bva
  SMTCoq.checker.small_checker.cnf
  SMTCoq.checker.small_checker.euf
  SMTCoq.checker.small_checker.lia
  SMTCoq.checker.small_checker.spl))
