(rocq.theory
 (name SMTCoq.tests.standalone)
 (theories Stdlib SMTCoq)
 (plugins rocq-smtcoq.smtcoq)
 (modules generated))

(env
 (_
  (env-vars
   (LFSCSIGS "../../src/lfsc/signatures"))))

(rule
 (target generated.v)
 (deps
  generate_dune_rules.sh
  (glob_files *.smt2))
 (action
  (with-stdout-to
   %{target}
   (run ./generate_dune_rules.sh %{deps}))))
