(rocq.theory
 (generate_project_file)
 (package rocq-smtcoq)
 (name SMTCoq.checker.small_checker.lia)
 (theories
  micromega_plugin  ; we need micromega_plugin because dune doesn't handle transitive dependencies
  Stdlib
  SMTCoq.utils
  SMTCoq.structures
  SMTCoq.checker.fol
  SMTCoq.checker.small_checker.euf))
